--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="max-width:1600px">
 	<div class="first-row row justify-content-center">
 		<div style="text-align: center; width:50%">
 			<img src="assets/img/Lazsoc-logo.png" style="width:40%">
@@ -32,7 +32,7 @@
 		  </a>
 		</div>
 	</div> -->
-	<div class="row" id="passion" style="position:relative">
+	<div class="row justify-content-center" id="passion" style="position:relative">
 		<div>
 			<img src="assets/img/LandingGraphic3.jpeg" class="graphic" style="float:right">
 			<div class="text-container" style="margin-left:40px">
@@ -41,17 +41,16 @@
 			</div>
 		</div>
 	</div>
-	<div class="row" id="community" style="position:relative">
+	<div class="row justify-content-center" id="community" style="position:relative">
 		<div>
 			<img src="assets/img/LandingGraphic2.jpeg" class="graphic" style="float:left; width: 65%">
-			<div class="text-container" style="margin-left:-8%">
+			<div class="text-container community-text">
 				<h1>Immerse yourself within an empowering community</h1>
-				<span class="subtext">With one of the smallest campuses in Ontario, the Lazaridis community is known to have the strongest and tight knit culture. Being a Lazaridis student, you are able to surround yourself with ambitious like minded students that push you past your comfort zone and help you pursue your passions. You get the oppurunity to inspire the lives of the generation that comes next by leading by example.
-</span>
+				<span class="subtext">With one of the smallest campuses in Ontario, the Lazaridis community is known to have the strongest and tight knit culture. Being a Lazaridis student, you are able to surround yourself with ambitious like minded students that push you past your comfort zone and help you pursue your passions. You get the oppurunity to inspire the lives of the generation that comes next by leading by example.</span>
 			</div>
 		</div>
 	</div>
-	<div class="row" id="experience" style="position:relative">
+	<div class="row justify-content-center" id="experience" style="position:relative">
 		<div>
 			<img src="assets/img/LandingGraphic1.jpeg" class="graphic" style="float:right">
 			<div class="text-container" style="margin-left:40px">
@@ -120,7 +119,7 @@
 		<img src="assets/img/Clubs-Right.png">
 	</div>
 	<div class="row final-panel justify-content-center" style="height:auto">
-		<img src="assets/img/FullTeam19.jpeg" style="width:100%">
+		<img src="assets/img/FullTeam19.jpeg">
 		<div class="final-panel-text-div">
 			<div class="final-panel-heading">Don't miss out!</div>
 			<div class="final-panel-subtext">Sign up here and stay on top</div>
