Major refactor to ClubDetailComponent - Piggybacking off the Resolver I implemented - Refactored internal events newsfeed to match changes made in NewsfeedComponent. Required changes in Resolver - Had to fix the hiring sidebar - Sidebar component not actually deleted, just renamed

--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -46,7 +46,7 @@
             </div>
           </div>
 					<div *ngIf="state === 'events'">
-						<app-newsfeed [clubID]="club.id"></app-newsfeed>
+						<app-newsfeed [clubEvents]="clubEvents" [isClubDetail]="true"></app-newsfeed>
 					</div>
           <div class="card sticky" *ngIf="state === 'team'">
             <h3 class="card-header card-header-text">Team</h3>
