--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -63,36 +63,38 @@
   </div>
   <div class="row justify-content-center mt-3">
     <div class="col-9">
-      <div class="card mb-3" *ngFor="let exp of work_experiences_attributes; let i = index">
+      <div class="card mb-3" *ngFor="let exp of updateObj.work_experiences_attributes; let i = index">
         <h2 class="card-header"> Work Experience </h2>
         <div class="card-body">
           <div class="form-group">
             <form class="mt-3 mb-2">
+              <div class="row">
+              </div>
               <div class="row justify-content-center">
                 <div class="col-lg-6 mb-3">
                   <label for="firstname">Company</label>
-                  <input type="text" class="form-control mb-3" id="firstname" name="firstname" [(ngModel)]="exp.company" >
+                  <input type="text" class="form-control mb-3" id="company" name="company" [(ngModel)]="exp.company" >
                 </div>
                 <div class="col-lg-6 mb-3">
                   <label for="firstname">Title</label>
-                  <input type="text" class="form-control mb-3" id="lastname" name="lastname" [(ngModel)]="exp.title" >
+                  <input type="text" class="form-control mb-3" id="title" name="title" [(ngModel)]="exp.title" >
                 </div>
               </div>
 
               <div class="row justify-content-center pb-0">
                 <div class="col-6 mb-3">
                   <label for="firstname">Start Date</label>
-                  <input type="date" class="form-control mb-3" name="program" [(ngModel)]="exp.started_date">
+                  <input type="date" class="form-control mb-3" name="start_date" [(ngModel)]="exp.start_date">
                 </div>
                 <div class="col-3 mb-3">
                   <label for="firstname">End Date</label>
-                  <input type="date" class="form-control mb-3" name="schoolyear" [(ngModel)]="exp.end_date">
+                  <input type="date" class="form-control mb-3" name="end_date" [(ngModel)]="exp.end_date">
                 </div>
                 <div class="col-3 align-self-center">
-                  <label class="form-check-label">
+<!--                   <label class="form-check-label">
                     <input type="checkbox" class="form-check-input" data-toggle="toggle" [(ngModel)]="exp.is_current">
                     I currently work here
-                  </label>
+                  </label> -->
                 </div>
               </div>
               <label for="summary">Job Highlights</label><br>
