--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,6 +8,14 @@
         <div class="card-body">
           <img [src]="user.image" class="profile-img" *ngIf="user.image">
           <img src="assets/img/Blank Avatar.jpg" class="profile-img" *ngIf="!user.image">
+          <div class="right-profile-div">
+            <div *ngIf="is_current_user" class="edit-btn" routerLink="/update">
+              <img src="assets/img/icons/edit.svg" style="width:18px">&nbsp; Edit Profile
+            </div>
+            <div *ngIf="!is_current_user" class="invite-btn" data-toggle="modal" data-target="#inviteModal">
+              Invite
+            </div>
+          </div>
           <div style="padding-top:10%; text-align:center">
             <h2 class="name-font">{{user.first_name}} {{user.last_name}}</h2>
             <h2 class="program">{{user.program}}</h2>
@@ -18,7 +26,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center mt-2">
+      <div class="row justify-content-center my-2">
         <div class="col-4 pr-1">
           <div class="card">
             <div class="card-body">
@@ -31,7 +39,7 @@
             <div class="card-header card-header-text">Experience</div>
             <div class="card-body">
               <ul class="list-group list-group-flush my-0">
-                <li class="list-group-item my-0" *ngFor="let exp of user.work_experiences_attributes">
+                <li class="list-group-item my-0" *ngFor="let exp of work_experiences">
                   <div class="media">
                     <img [src]="exp.club.logo" class="align-self-start">
                     <div class="media-body align-self-center ml-3">
@@ -48,5 +56,28 @@
       </div>
     </div>
   </div>
-
+  <div class="modal fade" id="inviteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <div *ngFor="let question of inviteQuestions">
+            <label for="goals">{{question.question}}</label><br>
+            <textarea rows="5" name="goals" [(ngModel)]="question.answer"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="invite()">Send invite</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
