--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,26 +1,19 @@
 <div class="container-fluid" style="max-width:1600px">
-	<div class="first-row row justify-content-center">
+<!-- 	<div class="first-row row justify-content-center">
 		<div style="text-align: center; width:50%">
-			<img src="assets/img/Lazsoc-logo.png" style="width:40%">
 			<h1>The fun outside the classroom starts here</h1>
 			<div class="subtext">
-				<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim odio quis orci pellentesque molestie. -->
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim odio quis orci pellentesque molestie.
 			</div>
 			<div class="gold-bar mx-auto mt-5"></div>
 		</div>
-	</div>
-<!-- 	<div class="row">
+	</div> -->
+	<div class="row mt-2">
 		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img class="d-block carousel-img" src="assets/img/Gradball.jpeg" alt="First slide">
-		    </div>
-		    <div class="carousel-item">
-		      <img class="d-block carousel-img" src="assets/img/banners/TapBanner.png" alt="Second slide">
-		    </div>
-		    <div class="carousel-item">
-		      <img class="d-block carousel-img" src="assets/img/banners/JdccBanner.png" alt="Third slide">
-		    </div>
+		  <div class="carousel-inner"  *ngFor="let event of carouselEvents">
+		    <a [href]="event.api_carousel_link" class="carousel-item active">
+		      <img class="d-block carousel-img" [src]="event.api_banner_link" alt="First slide">
+		    </a>
 		  </div>
 		  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -31,7 +24,7 @@
 		    <span class="sr-only">Next</span>
 		  </a>
 		</div>
-	</div> -->
+	</div>
 	<div class="row justify-content-center" id="passion" style="position:relative">
 		<div>
 			<img src="assets/img/LandingGraphic3.jpeg" class="graphic" style="float:right">
