--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -113,8 +113,9 @@ h5 {
 }
 .club-avatar {
   display: block;
-  width: 50px;
-  height:50px;
+  width: 60px;
+  height:60px;
+  margin-top:-10px;
   border-radius: 50%;
   /*border: 1px solid darkgrey;*/
 }
