--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,5 +1,10 @@
 <div class="container-fluid">
 	<div class="row justify-content-center mt-4">
+		<div class="col-sm-9">
+			<div class="sticky">
+				<job-posting-sidebar [clubID]="0"></job-posting-sidebar>
+			</div>
+		</div>
 		<div class="col-9">
 			<div class="card">
 				<div class="card-header pl-3">
@@ -25,7 +30,7 @@
 				</div>
 			</div>
 		</div>
-    <div class="col-3">
+    <div class="col-md-3">
       <div class="sticky">
         <job-posting-sidebar [clubID]="0"></job-posting-sidebar>
       </div>
