--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -92,6 +92,13 @@
             <a href="{{club.website}}" class="social-link-link">{{club.website}}</a>
           </div>
         </div>
+        <div class="d-flex flex-row mb-3" *ngIf="club.email != ''">
+          <img src="assets/img/website-icon.png" style="width:24px; height:24px">
+          <div class="d-flex flex-column ml-3">
+            <span class="social-link-title">Email</span>
+            <a href="mailto:{{club.email}}" class="social-link-link">{{club.email}}</a>
+        </div>
+        </div>
         <div class="d-flex flex-row mb-3" *ngIf="club.club_social_links.hasOwnProperty('facebook')">
           <img src="assets/img/facebook_logo.png" style="width:24px; height:24px">
           <div class="d-flex flex-column ml-3">
