--- a/src/app/club-detail/club-detail.component.css
+++ b/src/app/club-detail/club-detail.component.css
@@ -183,8 +183,8 @@ h6 {
 }
 
 .head-shot {
-  height: 160px;
-  width: 160px;
+  height: 140px;
+  width: 140px;
   border: 1px solid lightgrey;
   border-radius:10%;
   overflow: hidden;
@@ -193,7 +193,10 @@ h6 {
 }
 
 .head-shot > img {
-  width: 100%;
+  height: 100%;
+  width: auto;
+  overflow: hidden;
+  transform: translateX(-15%);
 }
 
 .persons {
