--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -111,7 +111,8 @@
                   <div [attr.id]="'collapseOne_' + i" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
                     <div class="card-body d-flex justify-content-around flex-wrap">
                       <div *ngFor="let person of portfolio.team" class="persons">
-                        <div class="head-shot"><img src="{{person.image}}"></div>
+                        <div class="head-shot has-headshot" *ngIf="person.image != null"><img src="{{person.image}}"></div>
+                        <div class="head-shot" *ngIf="person.image == null"><img src="assets/img/thumbnails/Lazsoc.png"></div>
                         <h6 class="mt-2">{{person.name}}</h6>
                         <p class="title-text">{{person.title}}</p>
                       </div>
@@ -127,7 +128,7 @@
     <div class="col-sm-3 col-md-3 col-lg-3">
       <job-posting-sidebar [clubID]="club.id"></job-posting-sidebar>
       <br>
-      <div class="social-sticky">
+<!--       <div class="social-sticky">
         <span class="card-header-text">Social Media</span>
         <hr/>
         <div class="d-flex flex-row mb-3" *ngIf="club.website != ''">
@@ -158,7 +159,7 @@
             <a [href]="club.club_social_links['twitter']" class="social-link-link">{{club.club_social_links['twitter']}}</a>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
