Re-introduction of club social links and fixed events sidebar

--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -128,7 +128,7 @@
     <div class="col-sm-3 col-md-3 col-lg-3">
       <job-posting-sidebar [clubID]="club.id"></job-posting-sidebar>
       <br>
-<!--       <div class="social-sticky">
+      <div class="social-sticky">
         <span class="card-header-text">Social Media</span>
         <hr/>
         <div class="d-flex flex-row mb-3" *ngIf="club.website != ''">
@@ -159,7 +159,7 @@
             <a [href]="club.club_social_links['twitter']" class="social-link-link">{{club.club_social_links['twitter']}}</a>
           </div>
         </div>
-      </div> -->
+      </div>
 
     </div>
   </div>
