--- a/src/app/sidebar/event-sidebar.component.html
+++ b/src/app/sidebar/event-sidebar.component.html
@@ -4,7 +4,7 @@
       <span class="card-header-text">Events this week</span>
     </div>
       <div *ngIf="anyEvents">
-        <div *ngFor="let event of events; let i = index">
+        <div *ngFor="let event of clubEvents; let i = index">
           <ul class="list-group list-group-flush" style="cursor: pointer">
             <li class="list-group-item py-2" style="border-bottom:1px solid lightgrey" routerLink="/events/{{event.id}}" *ngIf="i < 5">
               <div class="d-flex w-100" >
@@ -14,7 +14,7 @@
                 </div>
                 <div class="d-flex flex-column">
                   <span class="event-title-font">{{event.title}}</span>
-                  <span class="event-sub-heading">{{event.club_name}}</span>
+                  <span class="event-sub-heading">{{event.club.name}}</span>
                 </div>
               </div>
             </li>
